# intersock

./: CMakeLists.txt
src/: main.cpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
